// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The stripe disputes webhook API stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuAllowPolicy",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "stripedisputeslambdaproducerstripedisputesproducerCODEEndpointD234BA41": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentStageCODE0FCB7532",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueB38D1267": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueB38D1267",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessagetoBrazeEmailsQueue57881AF5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:GetQueueUrl",
                "sqs:SendMessage",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:sqs:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":braze-emails-CODE",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessagetoBrazeEmailsQueue57881AF5",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerSalesforcepolicyE2A80900": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:CODE/Salesforce/ConnectedApp/StripeDisputeWebhooks-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerSalesforcepolicyE2A80900",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerStripeWebhookspolicy770165A9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:CODE/Stripe/ConnectedApp/StripeDisputeWebhooks-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerStripeWebhookspolicy770165A9",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerZuorapolicy5E247616": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:CODE/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerZuorapolicy5E247616",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
        },
        "Stage": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentStageCODE0FCB7532",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "ConsumerLambdaErrorAlarm3D0F9AA4": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "The stripe-disputes consumer Lambda has experienced more than 3 errors in 5 minutes. This indicates failures in processing dispute webhooks from SQS. Common causes: Salesforce API errors, Zuora API errors, malformed webhook data",
        "AlarmName": "CODE stripe-disputes - Consumer Lambda high error rate",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "stripedisputeslambdaconsumerD464502F",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "stripedisputeslambdaconsumerD464502F",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 3,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "stripe-disputes-code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "stripe-disputes-code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "ProducerApiGateway4XXAlarmF620FC75": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "The stripe-disputes producer API has high 4XX error rate (>10 in 5 min). This may indicate invalid webhook signatures or missing headers. Check Stripe webhook configuration and secret key. ",
        "AlarmName": "CODE stripe-disputes - Producer API high 4XX error rate",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-disputes-producer-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "stripedisputeslambdaproducer13150932",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SQSMessageAgeAlarm01D7618E": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "Messages in the stripe-disputes queue are older than 5 minutes. This indicates the consumer Lambda is not processing messages fast enough. Check for Lambda throttling or processing errors. Queue: https://",
              {
                "Ref": "AWS::Region",
              },
              ".console.aws.amazon.com/sqs/v2/home?region=",
              {
                "Ref": "AWS::Region",
              },
              "#/queues/https%3A%2F%2Fsqs.",
              {
                "Ref": "AWS::Region",
              },
              ".amazonaws.com%2F",
              {
                "Ref": "AWS::AccountId",
              },
              "%2F",
              {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "QueueName",
                ],
              },
            ],
          ],
        },
        "AlarmName": "CODE stripe-disputes - SQS messages taking too long to process",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "stripedisputeseventsqueueF268BDE0",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 300,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "deadlettersstripedisputesqueueACC1EFEB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-stripe-disputes-queue-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeseventsqueueF268BDE0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "stripe-disputes-events-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersstripedisputesqueueACC1EFEB",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VisibilityTimeout": 300,
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeslambdaconsumerD464502F": {
      "DependsOn": [
        "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "stripedisputeslambdaconsumerServiceRole234A464E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "stripe-disputes-consumer-CODE",
        "Handler": "consumer.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaconsumerServiceRole234A464E",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaconsumerServiceRole234A464E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/stripe-disputes/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaconsumerSqsEventSourcestripedisputesCODEstripedisputeseventsqueueD7FA3D4B5873E52E": {
      "Properties": {
        "BatchSize": 1,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "stripedisputeseventsqueueF268BDE0",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "stripedisputeslambdaconsumerD464502F",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "stripedisputeslambdaproducer13150932": {
      "DependsOn": [
        "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "stripedisputeslambdaproducerServiceRoleF01BBA32",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes webhook events and processes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "DISPUTE_EVENTS_QUEUE_URL": {
              "Ref": "stripedisputeseventsqueueF268BDE0",
            },
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "stripe-disputes-producer-CODE",
        "Handler": "producer.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerServiceRoleF01BBA32",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/stripe-disputes/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaproducerServiceRoleF01BBA32": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A": {
      "Properties": {
        "Description": "API Gateway created by CDK",
        "Name": "stripe-disputes-producer-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEANY3CC4B447": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEANYApiPermissionTeststripedisputesCODEstripedisputeslambdaproducerstripedisputesproducerCODE51277FCAANYCE1A7C3C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEANYApiPermissionstripedisputesCODEstripedisputeslambdaproducerstripedisputesproducerCODE51277FCAANY841F5ACD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentStageCODE0FCB7532",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEAccount81E2A332": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesproducerCODECloudWatchRoleE7AFABAF",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODECloudWatchRoleE7AFABAF": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentECBEB16545cfa47daab6724d3ef6e4ff15fac98e": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesproducerCODEproxyANYC01EF3FC",
        "stripedisputeslambdaproducerstripedisputesproducerCODEproxyA9D84AD7",
        "stripedisputeslambdaproducerstripedisputesproducerCODEANY3CC4B447",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentStageCODE0FCB7532": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesproducerCODEAccount81E2A332",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentECBEB16545cfa47daab6724d3ef6e4ff15fac98e",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEproxyA9D84AD7": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEproxyANYApiPermissionTeststripedisputesCODEstripedisputeslambdaproducerstripedisputesproducerCODE51277FCAANYproxyD6D86CFA": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEproxyANYApiPermissionstripedisputesCODEstripedisputeslambdaproducerstripedisputesproducerCODE51277FCAANYproxyDE1F52A3": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODEDeploymentStageCODE0FCB7532",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerCODEproxyANYC01EF3FC": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODEproxyA9D84AD7",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerCODE94CD3A3A",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
  },
}
`;

exports[`The stripe disputes webhook API stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuAllowPolicy",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "stripedisputeslambdaproducerstripedisputesproducerPRODEndpoint6D64A3B6": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentStagePROD7EFD2073",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Alarm7103F465": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "stripe-disputes could not process a message and it ended up on the DLQ. Search the logs below for "error" for more information. Impact: There are one or more failed dispute webhook events in the stripe-disputes dead letter queue (DLQ). Check the attributes of the failed message(s) for details of the error and ensure the Stripe webhook processing is working correctly.
DLQ: https://",
              {
                "Ref": "AWS::Region",
              },
              ".console.aws.amazon.com/sqs/v2/home?region=",
              {
                "Ref": "AWS::Region",
              },
              "#/queues/https%3A%2F%2Fsqs.",
              {
                "Ref": "AWS::Region",
              },
              ".amazonaws.com%2F",
              {
                "Ref": "AWS::AccountId",
              },
              "%2F",
              {
                "Fn::GetAtt": [
                  "deadlettersstripedisputesqueueACC1EFEB",
                  "QueueName",
                ],
              },
            ],
          ],
        },
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "deadlettersstripedisputesqueueACC1EFEB",
                  "QueueName",
                ],
              },
              " has messages",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersstripedisputesqueueACC1EFEB",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "stripedisputeslambdaconsumerD464502F",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueB38D1267": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessageandGetQueueAttributestoDisputeEventsQueueB38D1267",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSQSSendMessagetoBrazeEmailsQueue57881AF5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:GetQueueUrl",
                "sqs:SendMessage",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:sqs:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":braze-emails-PROD",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSQSSendMessagetoBrazeEmailsQueue57881AF5",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerSalesforcepolicyE2A80900": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:PROD/Salesforce/ConnectedApp/StripeDisputeWebhooks-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerSalesforcepolicyE2A80900",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerStripeWebhookspolicy770165A9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:PROD/Stripe/ConnectedApp/StripeDisputeWebhooks-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerStripeWebhookspolicy770165A9",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowSecretsManagerZuorapolicy5E247616": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:PROD/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowSecretsManagerZuorapolicy5E247616",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "stripe-disputes returned a 5XX response. Search the logs below for "error" for more information. Impact: The stripe-disputes producer API is returning 5XX errors. This prevents Stripe from delivering webhook events. Check for Lambda errors, timeout issues, or signature verification failures. ",
        "AlarmName": "stripe-disputes-producer-PROD 5XX errors",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-disputes-producer-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "stripedisputeslambdaproducer13150932",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
        },
        "Stage": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentStagePROD7EFD2073",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "ConsumerLambdaErrorAlarm3D0F9AA4": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "The stripe-disputes consumer Lambda has experienced more than 3 errors in 5 minutes. This indicates failures in processing dispute webhooks from SQS. Common causes: Salesforce API errors, Zuora API errors, malformed webhook data",
        "AlarmName": "PROD stripe-disputes - Consumer Lambda high error rate",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "stripedisputeslambdaconsumerD464502F",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "stripedisputeslambdaconsumerD464502F",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 3,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "stripe-disputes.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "stripe-disputes.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "ProducerApiGateway4XXAlarmF620FC75": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "The stripe-disputes producer API has high 4XX error rate (>10 in 5 min). This may indicate invalid webhook signatures or missing headers. Check Stripe webhook configuration and secret key. ",
        "AlarmName": "PROD stripe-disputes - Producer API high 4XX error rate",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-disputes-producer-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "stripedisputeslambdaproducer13150932",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SQSMessageAgeAlarm01D7618E": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              "Messages in the stripe-disputes queue are older than 5 minutes. This indicates the consumer Lambda is not processing messages fast enough. Check for Lambda throttling or processing errors. Queue: https://",
              {
                "Ref": "AWS::Region",
              },
              ".console.aws.amazon.com/sqs/v2/home?region=",
              {
                "Ref": "AWS::Region",
              },
              "#/queues/https%3A%2F%2Fsqs.",
              {
                "Ref": "AWS::Region",
              },
              ".amazonaws.com%2F",
              {
                "Ref": "AWS::AccountId",
              },
              "%2F",
              {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "QueueName",
                ],
              },
            ],
          ],
        },
        "AlarmName": "PROD stripe-disputes - SQS messages taking too long to process",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "stripedisputeseventsqueueF268BDE0",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 300,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "deadlettersstripedisputesqueueACC1EFEB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-stripe-disputes-queue-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeseventsqueueF268BDE0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "stripe-disputes-events-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersstripedisputesqueueACC1EFEB",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VisibilityTimeout": 300,
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "stripedisputeslambdaconsumerD464502F": {
      "DependsOn": [
        "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "stripedisputeslambdaconsumerServiceRole234A464E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "stripe-disputes-consumer-PROD",
        "Handler": "consumer.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaconsumerServiceRole234A464E",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaconsumerServiceRole234A464E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/stripe-disputes/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "stripedisputeseventsqueueF268BDE0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaconsumerServiceRoleDefaultPolicy23188124",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaconsumerServiceRole234A464E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaconsumerSqsEventSourcestripedisputesPRODstripedisputeseventsqueueE0B39D5B75C6D848": {
      "Properties": {
        "BatchSize": 1,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "stripedisputeseventsqueueF268BDE0",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "stripedisputeslambdaconsumerD464502F",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "stripedisputeslambdaproducer13150932": {
      "DependsOn": [
        "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "stripedisputeslambdaproducerServiceRoleF01BBA32",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/stripe-disputes/stripe-disputes.zip",
        },
        "Description": "A lambda that handles stripe disputes webhook events and processes SQS events",
        "Environment": {
          "Variables": {
            "APP": "stripe-disputes",
            "DISPUTE_EVENTS_QUEUE_URL": {
              "Ref": "stripedisputeseventsqueueF268BDE0",
            },
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "stripe-disputes-producer-PROD",
        "Handler": "producer.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerServiceRoleF01BBA32",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/stripe-disputes/stripe-disputes.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/stripe-disputes",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/stripe-disputes/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stripedisputeslambdaproducerServiceRoleDefaultPolicy99A4BFD8",
        "Roles": [
          {
            "Ref": "stripedisputeslambdaproducerServiceRoleF01BBA32",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "stripedisputeslambdaproducerServiceRoleF01BBA32": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODANY3EDEAC10": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODANYApiPermissionTeststripedisputesPRODstripedisputeslambdaproducerstripedisputesproducerPROD7A5DFE54ANY410B8DA1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODANYApiPermissionstripedisputesPRODstripedisputeslambdaproducerstripedisputesproducerPROD7A5DFE54ANY874EEF2D": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentStagePROD7EFD2073",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODAccountA0435C59": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesproducerPRODCloudWatchRoleC3008504",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6": {
      "Properties": {
        "Description": "API Gateway created by CDK",
        "Name": "stripe-disputes-producer-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODCloudWatchRoleC3008504": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentCC0BB07C8cf8bf1152da71205a48d1f5763d672b": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesproducerPRODproxyANY523CD05A",
        "stripedisputeslambdaproducerstripedisputesproducerPRODproxy7610EE25",
        "stripedisputeslambdaproducerstripedisputesproducerPRODANY3EDEAC10",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentStagePROD7EFD2073": {
      "DependsOn": [
        "stripedisputeslambdaproducerstripedisputesproducerPRODAccountA0435C59",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentCC0BB07C8cf8bf1152da71205a48d1f5763d672b",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-disputes",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODproxy7610EE25": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODproxyANY523CD05A": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "stripedisputeslambdaproducer13150932",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODproxy7610EE25",
        },
        "RestApiId": {
          "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODproxyANYApiPermissionTeststripedisputesPRODstripedisputeslambdaproducerstripedisputesproducerPROD7A5DFE54ANYproxy24197D3E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "stripedisputeslambdaproducerstripedisputesproducerPRODproxyANYApiPermissionstripedisputesPRODstripedisputeslambdaproducerstripedisputesproducerPROD7A5DFE54ANYproxyAFE6C62C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "stripedisputeslambdaproducer13150932",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODB20FADF6",
              },
              "/",
              {
                "Ref": "stripedisputeslambdaproducerstripedisputesproducerPRODDeploymentStagePROD7EFD2073",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
